--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "plugins": ["babel-plugin-styled-components"]
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "displayName": true
+      }
+    ]
+  ]
 }
